# medfund

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: CLAUDE.md  adjudication.md  ai-integration.md  architecture.md  coding-standards.md  infrastructure.md  migration-strategy.md  multi-currency.md  multi-tenancy.md  payments.md  portals.md  rules-engine.md  tech-stack.md
.github/workflows/: elixir.yml  go.yml  java.yml  python.yml
clients/angular/: Dockerfile  angular.json  nginx.conf  package.json  (+1 more)
docs/: keycloak-setup.md  local-dev-setup.md  user-workflows.md
scripts/: bootstrap-keycloak.sh
services/python/ai-service/: Dockerfile  pyproject.toml
services/python/ai-service/app/: main.py
services/python/ai-service/app/api/: __init__.py  adjudication.py  analytics.py  chatbot.py  forecasting.py  fraud.py  health.py  ocr.py
services/python/ai-service/app/core/: anthropic_client.py  config.py  database.py  gemini_client.py  kafka_consumer.py  tenant.py
services/python/ai-service/app/models/: __init__.py  db_models.py  prediction.py
services/python/ai-service/app/services/: __init__.py  adjudication_service.py  anomaly_service.py  chatbot_service.py  duplicate_detection.py  forecasting_service.py  fraud_service.py  ml_models.py  ocr_service.py  prediction_repository.py
services/python/ai-service/tests/: test_adjudication.py  test_anomaly.py  test_anthropic_client.py  test_chatbot.py  test_duplicate_detection.py  test_forecasting.py  test_fraud.py  test_fraud_ml.py  test_health.py  test_prediction_repository.py  test_services.py
(+617 files in other folders)
